// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div
  class="za-input za-input-text"
>
  <input
    type="text"
  />
</div>
`;

exports[`Input showLength 1`] = `
<div
  class="za-input za-input-textarea"
>
  <textarea
    maxlength="100"
    rows="4"
  />
  <div
    class="za-input-length"
  >
    0/100
  </div>
</div>
`;

exports[`Input.Idcard renders correctly 1`] = `
<div
  class="za-input za-input-number"
>
  <div
    class="za-input-placeholder"
  />
  <div
    class="za-input-content"
  />
  <input
    type="hidden"
    value=""
  />
  <div
    class="za-keyboard-picker"
  >
    <div
      class="za-popup za-popup-hidden"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms"
      >
        <div
          class="za-keyboard"
        >
          <div
            class="za-keyboard-keys"
          >
            <div
              class="za-keyboard-item"
            >
              1
            </div>
            <div
              class="za-keyboard-item"
            >
              2
            </div>
            <div
              class="za-keyboard-item"
            >
              3
            </div>
            <div
              class="za-keyboard-item"
            >
              4
            </div>
            <div
              class="za-keyboard-item"
            >
              5
            </div>
            <div
              class="za-keyboard-item"
            >
              6
            </div>
            <div
              class="za-keyboard-item"
            >
              7
            </div>
            <div
              class="za-keyboard-item"
            >
              8
            </div>
            <div
              class="za-keyboard-item"
            >
              9
            </div>
            <div
              class="za-keyboard-item"
            >
              x
            </div>
            <div
              class="za-keyboard-item"
            >
              0
            </div>
            <div
              class="za-keyboard-item"
            >
              <i
                class="za-icon za-icon-keyboard"
              />
            </div>
          </div>
          <div
            class="za-keyboard-handle"
          >
            <div
              class="za-keyboard-item"
            >
              <i
                class="za-icon za-icon-deletekey"
              />
            </div>
            <div
              class="za-keyboard-item za-keyboard-item-ok"
            >
              确定
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input.Number renders correctly 1`] = `
<div
  class="za-input za-input-number"
>
  <div
    class="za-input-placeholder"
  />
  <div
    class="za-input-content"
  />
  <input
    type="hidden"
    value=""
  />
  <div
    class="za-keyboard-picker"
  >
    <div
      class="za-popup za-popup-hidden"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms"
      >
        <div
          class="za-keyboard"
        >
          <div
            class="za-keyboard-keys"
          >
            <div
              class="za-keyboard-item"
            >
              1
            </div>
            <div
              class="za-keyboard-item"
            >
              2
            </div>
            <div
              class="za-keyboard-item"
            >
              3
            </div>
            <div
              class="za-keyboard-item"
            >
              4
            </div>
            <div
              class="za-keyboard-item"
            >
              5
            </div>
            <div
              class="za-keyboard-item"
            >
              6
            </div>
            <div
              class="za-keyboard-item"
            >
              7
            </div>
            <div
              class="za-keyboard-item"
            >
              8
            </div>
            <div
              class="za-keyboard-item"
            >
              9
            </div>
            <div
              class="za-keyboard-item za-keyboard-item-disabled"
            />
            <div
              class="za-keyboard-item"
            >
              0
            </div>
            <div
              class="za-keyboard-item"
            >
              <i
                class="za-icon za-icon-keyboard"
              />
            </div>
          </div>
          <div
            class="za-keyboard-handle"
          >
            <div
              class="za-keyboard-item"
            >
              <i
                class="za-icon za-icon-deletekey"
              />
            </div>
            <div
              class="za-keyboard-item za-keyboard-item-ok"
            >
              确定
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input.Price renders correctly 1`] = `
<div
  class="za-input za-input-number"
>
  <div
    class="za-input-placeholder"
  />
  <div
    class="za-input-content"
  />
  <input
    type="hidden"
    value=""
  />
  <div
    class="za-keyboard-picker"
  >
    <div
      class="za-popup za-popup-hidden"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms"
      >
        <div
          class="za-keyboard"
        >
          <div
            class="za-keyboard-keys"
          >
            <div
              class="za-keyboard-item"
            >
              1
            </div>
            <div
              class="za-keyboard-item"
            >
              2
            </div>
            <div
              class="za-keyboard-item"
            >
              3
            </div>
            <div
              class="za-keyboard-item"
            >
              4
            </div>
            <div
              class="za-keyboard-item"
            >
              5
            </div>
            <div
              class="za-keyboard-item"
            >
              6
            </div>
            <div
              class="za-keyboard-item"
            >
              7
            </div>
            <div
              class="za-keyboard-item"
            >
              8
            </div>
            <div
              class="za-keyboard-item"
            >
              9
            </div>
            <div
              class="za-keyboard-item"
            >
              .
            </div>
            <div
              class="za-keyboard-item"
            >
              0
            </div>
            <div
              class="za-keyboard-item"
            >
              <i
                class="za-icon za-icon-keyboard"
              />
            </div>
          </div>
          <div
            class="za-keyboard-handle"
          >
            <div
              class="za-keyboard-item"
            >
              <i
                class="za-icon za-icon-deletekey"
              />
            </div>
            <div
              class="za-keyboard-item za-keyboard-item-ok"
            >
              确定
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input.Textarea autoHeight 1`] = `
<Input
  autoHeight={true}
  onChange={[Function]}
  rows={4}
  type="textarea"
  value="foo"
>
  <InputTextarea
    autoHeight={true}
    disabled={false}
    focused={false}
    onChange={[Function]}
    prefixCls="za-input"
    rows={4}
    showLength={false}
    value="foo"
  >
    <div
      className="za-input za-input-textarea"
    >
      <textarea
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        rows={4}
        value="foo"
      />
    </div>
  </InputTextarea>
</Input>
`;

exports[`Input.Textarea renders correctly 1`] = `
<div
  class="za-input za-input-textarea"
>
  <textarea
    rows="4"
  />
</div>
`;
